# Dagger

./: .gitignore  Formula Test.xlsx  LICENSE  README.md  computation_graph.py  demo.ipynb  dev_dag.ipynb  dev_formulas.ipynb  formulas.py  monte_carlo.py  py_formulas.py  pyproject.toml  requirements.txt  test.ps
dagger/: __init__.py  computation_graph.py  monte_carlo.py  visualization.py
examples/: Formula Test.xlsx  demo.ipynb
