[project]
name = "dagger"
version = "0.1.0"
description = "Directed acyclic graph computation engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx",
  "matplotlib",
  "pydot",
  "pygraphviz",
  "numpy",
  "pandas",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagger"]
